Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Adding a proxy type information in getContentInfo()
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-