@@ -9,4 +9,6 @@ Bug fixes:
 -
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- Really return box guard at t time (no useless computation).
+- Allow using setGuardProperties outside of a request context; plus cleaning
+  code. (Coin !)
